<resources>
    <string name="app_name">BookShelf</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Ermias Mesfin </string>
    <string name="nav_header_subtitle" translatable="false">ermiasmesfintech@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">SignOut</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="book_list">Book List</string>
    <string name="top_rated">Top Rated</string>
    <string name="recent">Recent</string>
    <string name="title_activity_create_book" translatable="false">CreateBookActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="category_default" translatable="false">Sc-Fi</string>
    <string name="book_title_placeholder" translatable="false">The Life of Sparrow</string>
    <string name="author_name_placeholder" translatable="false">#Dr. Shanshie</string>
    <string name="book_title_hint">Book title</string>
    <string name="book_desc_hint">A little bit about the book ...</string>
    <string name="set_book_cover_btn_text">Set Book Cover</string>
    <string name="save_button_text">SAVE</string>
    <string name="upload_book_doc_button_text">Upload Book Doc</string>
    <string name="user_name_hint">User Name</string>
    <string name="display_name_hint" translatable="false">ermias mesfin</string>
    <string name="password_hint" translatable="false">*********</string>
    <string name="login_button_text">Login</string>
    <string name="forget_password_button_text">Forget Password</string>
    <string name="i_don_t_have_an_account_button_text">I Don\'t Have an Account</string>
    <string name="navigate_to_create_book_fab_text">Navigate to Create book</string>
    <string name="books_tab_text">Books</string>
    <string name="top_rated_tab_text">Top Rated</string>
    <string name="recent_tab_text">Recent</string>
    <string name="user_name_input_text">User Name</string>
    <string name="search_hint">fiction</string>
    <string name="search_title">Search</string>
    <string name="string_notifications">Notifications</string>
    <string name="string_info">Info</string>
    <string name="string_settings">Settings</string>

    <string-array name="categories">
        <item>Fiction</item>
        <item>Sc-Fi Adventure</item>
        <item>Education</item>
        <item>Documentary</item>
    </string-array>

    <string-array name="sort_by">
        <item>Date</item>
        <item>Author</item>
        <item>Title</item>
    </string-array>

    <string-array name="filter_by">
        <item>All</item>
        <item>Fiction</item>
        <item>Sc-Fi Adventure</item>
        <item>Education</item>
        <item>Documentary</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="ok">OK</string>
    <string name="write_external_storage_permission">Need Write External Disk Permission In order to have Storage Read And Write access</string>
    <string name="book_cover_label">Book Cover</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="book_cover_desc">"book cover "</string>
    <string name="book_list_app_bar_title">Book Shelf</string>
    <string name="nav_home" translatable="false">BookShelf</string>
    <string name="nav_downloads">Downloads</string>
    <string name="nav_notifications">New Releases</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_contactus">Contact Us</string>
    <string name="nav_update" translatable="false">Version</string>
    <string name="nav_group_settings">Settings</string>
    <string name="nav_my_books">My Books</string>
    <string name="text_font_size_seekbar_summary">Text font size of book title</string>
    <string name="user_email_string" translatable="false">example@gamil.com</string>
    <string name="mypassword_string" translatable="false">mypassword</string>
    <string name="forget_password_string">Forget Password</string>
    <string name="have_an_account_string">have an account</string>
    <string name="create_account_string">create account</string>
    <string name="your_web_client_id" translatable="false">731245511798-1qcug65ejmhl1t56h11fkc2kn47cpjru.apps.googleusercontent.com</string>
    <string name="create_app_bar_title_string">Create Book</string>
    <string name="my_books_app_bar_title_string">My Books</string>
    <string name="password_or_email_is_not_correct_string" translatable="false">password or email is not correct</string>
    <string name="password_error_string" translatable="false">invalid password, It must be at least 8 character</string>
    <string name="email_error_string" translatable="false">invalid email or not found</string>
    <string name="dsplay_name_error_string" translatable="false">Display name should be at least 4 character or empty</string>
    <string name="create_password_error_string" translatable="false"><![CDATA[password must be at least 8 character and include A-Z, 0-9,! # @ % ^ & *]]></string>
    <string name="confirm_password_error_string">password doesn\'t match</string>
    <string name="buy_book_string">Buy Book</string>
    <string name="download_book_channel_name">download book channel</string>
    <string name="download_book_channel_description">"Download Book "</string>
    <string name="edit_profile_picture">edit profile picture</string>
    <string name="fab_content_desc">fab menu book detail</string>
</resources>