<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bookshelf.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.bookshelf.ui.gallery.GalleryFragment"
        android:label="@string/string_notifications"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.bookshelf.ui.slideshow.SlideshowFragment"
        android:label="@string/string_info"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.bookshelf.SettingsFragment"
        android:label="@string/string_settings" />
    <fragment
        android:id="@+id/bookDetailFragment"
        android:name="com.example.bookshelf.BookDetailFragment"
        android:label="fragment_book_detail"
        tools:layout="@layout/fragment_book_detail" />
</navigation>