<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="Display"
        >

        <SeekBarPreference
            android:title="Text Font size"
            android:key="text_font_size"
            android:defaultValue="12"
            android:max="36"
            android:summary="@string/text_font_size_seekbar_summary"
            />

        <ListPreference
            app:defaultValue="bookshelf_default"
            app:entries="@array/list_of_themes_entries"
            app:entryValues="@array/list_of_themes_values"
            app:key="theme_color"
            app:title="Theme Color"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:title="Night Mode"
            android:key="night_mode"
            android:defaultValue="false"
            />

    </PreferenceCategory>
    <PreferenceCategory app:title="Storage">
        <ListPreference
            app:defaultValue="Phone Storage"
            app:entries="@array/list_of_storage_entries"
            app:entryValues="@array/list_of_storage_values"
            app:key="download_storage"
            app:title="Downloads"
            app:useSimpleSummaryProvider="true"
            />
    </PreferenceCategory>
    <PreferenceCategory app:title="Pdf Reader">
        <ListPreference
            app:defaultValue="Open in browser"
            app:entries="@array/list_of_pdf_reader_entries"
            app:entryValues="@array/list_of_pdf_reader_values"
            app:key="pdf_reader"
            app:title="Open in browser"
            app:useSimpleSummaryProvider="true"
            />
    </PreferenceCategory>
    <PreferenceCategory app:title="Language">
        <ListPreference
            app:defaultValue="English"
            app:entries="@array/list_of_language_entries"
            app:entryValues="@array/list_of_language_values"
            app:key="language"
            app:title="Language"
            app:useSimpleSummaryProvider="true"
            />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">
        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>