<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.bookshelf.create.CreateBookViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/teBookTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_shape"
            android:ems="10"
            android:fontFamily="@font/akaya_telivigala"
            android:hint="@string/book_title_hint"
            android:inputType="text"
            android:padding="16dp"
            android:text="@={viewModel.bookTitle}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textColorHint="@color/primaryGray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/svCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="2dp"
            android:fontFamily="@font/akaya_telivigala"
            android:padding="16dp"
            android:background="@drawable/input_shape"
            app:layout_constraintEnd_toEndOf="@+id/teBookTitle"
            app:layout_constraintStart_toStartOf="@+id/teBookTitle"
            app:layout_constraintTop_toBottomOf="@+id/teBookTitle"
            tools:listheader="Category" />

        <EditText
            android:id="@+id/teDesc"
            android:text="@={viewModel.bookDesc}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="@font/akaya_telivigala"
            android:gravity="start|top"
            android:hint="@string/book_desc_hint"
            android:textColorHint="@color/primaryGray"
            android:inputType="textMultiLine"
            android:lines="4"
            android:padding="16dp"
            android:background="@drawable/input_shape"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/svCategory"
            app:layout_constraintStart_toStartOf="@+id/svCategory"
            app:layout_constraintTop_toBottomOf="@+id/svCategory" />

        <Button
            android:id="@+id/btnBookCover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_rounded_colored"
            android:elevation="4dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/set_book_cover_btn_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/teDesc"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/teDesc"
            app:layout_constraintTop_toBottomOf="@+id/teDesc" />

        <Button
            android:id="@+id/btnAddBook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="132dp"
            android:background="@drawable/btn_shape"
            android:drawableStart="@drawable/ic_baseline_check_24"
            android:elevation="4dp"
            android:fontFamily="@font/akaya_telivigala"
            android:gravity="center"
            android:text="@string/save_button_text"
            android:textColor="@color/primaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/teDesc"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/teDesc" />

        <ProgressBar
            android:id="@+id/pbAddBook"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUploadBook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_shape_outlined"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/upload_book_doc_button_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/teDesc"
            app:layout_constraintStart_toStartOf="@+id/teDesc"
            app:layout_constraintTop_toBottomOf="@+id/btnBookCover" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
