<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ele"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="20dp"
        android:focusable="auto"
        app:circularflow_radiusInDP="100"
        android:theme="@style/Theme.BookShelf"
        tools:context=".ui.login.LoginActivity">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:cursorVisible="true"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:ems="10"
            android:hint="@string/user_name_hint"
            android:inputType="textPersonName"
            android:padding="6dp"
            android:paddingBottom="0dp"
            android:text=""
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="120dp" />

        <EditText
            android:id="@+id/editTextUserPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="6dp"
            android:paddingBottom="0dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="620dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUserLogin"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:elevation="12dp"
            android:insetBottom="5dp"
            android:letterSpacing="0.2"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:text="@string/login_button_text"
            android:textSize="20sp"
            app:barrierMargin="100dp"
            app:circularflow_angles="100"
            app:cornerRadius="100pt"
            app:layout_constraintEnd_toEndOf="@+id/editTextUserPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextUserPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserPassword" />

        <Button
            android:id="@+id/btnPasswordForget"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:letterSpacing="0.05"
            android:text="@string/forget_password_button_text"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20sp"
            app:circularflow_radiusInDP="20dp"
            app:layout_constraintEnd_toEndOf="@+id/btnUserLogin"
            app:layout_constraintStart_toStartOf="@+id/btnUserLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnUserLogin" />

        <Button
            android:id="@+id/btnCreateUser"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:letterSpacing="0.05"
            android:text="@string/i_don_t_have_an_account_button_text"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@+id/btnUserLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnUserLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnPasswordForget"
            app:layout_constraintVertical_bias="0.257" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:buttonSize="standard"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@+id/btnCreateUser"
            app:layout_constraintStart_toStartOf="@+id/btnCreateUser"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateUser" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
